fix alignment issues with different resolutions and switch the images for home video section

--- a/public/app.css
+++ b/public/app.css
@@ -131,7 +131,7 @@ body{
     float: left;
     top: 120px;
     display: grid;
-    height: 450px;
+    height: 475px;
 }
 .section__upper{
     height: 80px;
@@ -231,7 +231,7 @@ a:hover {
 }
 
 .video-section{
-    height: 450px;
+    height: 475px;
     top: 120px;
 }
 
@@ -340,14 +340,14 @@ a:hover {
     background-image: url(https://s3-eu-west-1.amazonaws.com/images.sendyit.com/website/home2/Kitenge.png);
     background-size: cover;
     background-repeat: repeat-x;
-    height: 25px;
+    height: 24px;
     width: 100%;
 }
 
 .estimations-section{
     width: 100%;
     min-height: 300px;
-    margin-top: -45px;
+    margin-top: -35px;
     transition: all .5s ease-in-out;
 }
 
@@ -505,7 +505,7 @@ a:hover {
     font-weight: 300;
     font-size: 20px;
     margin-top: -20px;
-    width: 90%;
+    width: 85%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -1991,7 +1991,9 @@ a:hover {
         .img-senior {
             background-position-y: -90px;
         }
-
+        .slides-header{
+            margin-bottom: 0px;
+        }
         }
     @media only screen and (max-width: 1800px) {
         .button__link{
@@ -2142,6 +2144,7 @@ a:hover {
         }
         .slides-header{
             margin-bottom: 25px;
+            margin-top: 10px;
         }
         .slides-container {
             grid-template-rows: 730px;
